--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.3
-yarn_mappings=1.16.3+build.7
-loader_version=0.10.3+build.211
+minecraft_version=1.16.1
+yarn_mappings=1.16.1+build.21
+loader_version=0.11.3
 # Mod Properties
 mod_version=0.4.0
 maven_group=amerebagatelle.github.io
-archives_base_name=fabricskyboxes-1.16
+archives_base_name=fabricskyboxes-1.16.1
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_resource_loader_version=0.3.1+facf3bbf95
-databreaker_version=f072a81fbd26e4978b687414a21f1ea4a0077c15
+fabric_resource_loader_version=0.2.6+f41e209802
+databreaker_version=ca256383f1c320ef3e230fdb0b6a2df5a79b3387
